fix title image on mobile device

--- a/css/styles.css
+++ b/css/styles.css
@@ -142,3 +142,17 @@ p {
 .pricing-column {
   padding: 3% 2%;
 }
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-message {
+    padding-bottom: 10%;
+  }
+  .title-img {
+    position: static;
+    transform: rotate(0);
+  }
+}
